Fix a table and a typo

--- a/C03.The.Preprocessor.md
+++ b/C03.The.Preprocessor.md
@@ -27,8 +27,7 @@ any backslashes in a header name are not escape characters.
 | Directive   | Description |
 |-------------|-------------|
 | `#include`  | Includes text of header or source file. |
-| `#define`   | Enters a symbol into the symbol table for the current
-compilation unit, with an optional valuee. |
+| `#define`   | Enters a symbol into the symbol table for the current compilation unit, with an optional valuee. |
 | `#undef`    | Removes a symbol from the symbol table. |
 | `#if`       | Control flow |
 | `#elif`     | Control flow |
@@ -37,9 +36,7 @@ compilation unit, with an optional valuee. |
 | `#ifdef`    | Symbol table query directives. |
 | `#ifndef`   | Symbol table query directives. |
 | `#error`    | Prints a message to `stderr` and aborts. |
-| `#line`     | Renumbers the current source line. Utilities, such as code
-generators, use this to synchronize generated lines with original source lines
-in error message. |
+| `#line`     | Renumbers the current source line. Utilities, such as code generators, use this to synchronize generated lines with original source lines in error message. |
 | `#pragma`   | Compiler-dependent actions. |
 
 All preprocessor directives begin with the `#` character, which must be the
@@ -130,7 +127,7 @@ c = (getc)(stdin);
 ```
 
 This cannot match the macro definition because a left parenthesis does not
-immediately follow the functio name.
+immediately follow the function name.
 
 ## Conditional Compilation
 
