try code link reference

--- a/C11.Visibility.md
+++ b/C11.Visibility.md
@@ -2,7 +2,7 @@
 
 An identifier can play various roles in a program.
 
-[`same_identifier_various_roles.c`](code/C11.Visibility/same_identifier_various_roles.c)
+[`same_identifier_various_roles.c`][]
 illustrates that `pair` is both a function name and a struct tag.
 
 The compiler keeps lists of identifiers used in different roles, so there is
@@ -44,3 +44,5 @@ hides 2 and in order to use 2 `struct` or `class` keyword must be
 explicitly used.
 
 ## Namespace Scope
+
+[`same_identifier_various_roles.c`]: code/C11.Visibility/same_identifier_various_roles.c
