--- a/C11.Visibility.md
+++ b/C11.Visibility.md
@@ -1,9 +1,8 @@
 ## Classic Namespaces
 
 An identifier can play various roles in a program.
-
-[`same_identifier_various_roles.c`][]
-illustrates that `pair` is both a function name and a struct tag.
+[`same_identifier_various_roles.c`][] illustrates that `pair` is both a
+function name and a `struct` tag.
 
 The compiler keeps lists of identifiers used in different roles, so there is
 no danger of ambiguity. These lists are called namespaces. There are four
@@ -16,33 +15,104 @@ different kinds of namespaces in standard C:
     typedefs, and enumeration constants).
 
 In C++ you can use structure tags (which are really class names) without
-the `struct` keyword.
-
-[`use_struct.cpp`](code/C11.Visibility/use_struct.cpp) illustrates that we
-can say `struct pair p = {1,2};` and also `pair p = {1,2}`. Likewise
+the `struct` keyword. [`use_struct.cpp`][] illustrates that we can say
+`struct pair p = {1,2};` and also `pair p = {1,2}`. Likewise
 `class pair p = {1,2}` and `pair p = {1,2}`.
 
 In other words, all `struct` and `class` names act as type names, as if you
 had also defined a `typedef` with the same name as the tag. This means that
 you cannot use a name as both a structure tag and a `typedef` for a
-different type in the same scope. C++ has merged that 2 and 4 above. As a
-compatibility gesture, you are still allowed to define functions with the
-same name as a tag.
+different type in the same scope. C++ has merged that namespace 2 and
+namespace 4 above. As a compatibility gesture, you are still allowed to
+define variables, functions and other entities in namespace 4 above with
+the same name.
 
-[`same_name_function_tag.cpp`](code/C11.Visibility/same_name_function_tag.cpp)
-and
-[`same_name_variable_tag.cpp`](code/C11.Visibility/same_name_variable_tag.cpp)
+[`same_name_function_tag.cpp`][] and [`same_name_variable_tag.cpp`][]
 illustrate that you can define a `struct` and a function or variable with
 the same name in the scope.
 
 However by doing this you cannot use the `struct` name anymore unless the
 `struct` or `class` keyword is used explicitly. This is illustrated by
-[`pair.cpp`](code/C11.Visibility/pair.cpp).
+[`pair.cpp`][].
 
-In short when using the same name for 2 and 4 above in the same scope, 4
-hides 2 and in order to use 2 `struct` or `class` keyword must be
-explicitly used.
+In short when using the same name for entities from namespace 2 and
+namespace 4 above in the same scope, the name in namespace 4 hides the one
+in namespace 2 and in order to use the one in namespace 2 `struct` or
+`class` keyword must be explicitly used.
 
 ## Namespace Scope
 
+A C++ namespace is an optionally named declarative region, allowing you to
+group declarations together.
+
+To use names from a namespace, you have three options:
+1.  Use a fully qualified name
+2.  *using declaration*
+3.  *using directive*
+
+A using declaration imports all overloads of a name.
+
+A using declaration *is* a declaration and adds declarations to a
+declarative region. The usual rules for declarations apply. Unless the
+declarations in the same scope with the same name declare the same thing,
+or the program is ill-formed. While a using directive is not a declaration, 
+it only makes certain names usable in a declarative region.
+
+Making a name usable in a certain scope, as opposed to declaring it, is
+intended to be a much weaker thing. The name made usable by using directive
+is not considered during qualified lookup, if there's another declaration
+with the same name.
+
+A name prefixed by the unary scope operator `::` is looked up in global
+scope, in the translation unit where it is used. The name shall be declared
+in global namespace scope or shall be a name whose declaration is visible
+in global scope because of a using directive. The use of `::` allows a
+global name to be referred to even if its identifier has been hidden.
+
+For unqualified lookup, the names nominated by a using directive are
+treated as members of the enclosing namespace and can cause ambiguity.
+
+[`myname.h`], [`myname.cpp`], [`use_myname.cpp`] illustrates a namespace
+and the usage of names from it.
+
+[`unary_scope.cpp`][] demonstrates the unary scope operator looks up in
+global scope.
+
+[`namespace_alias.cpp`][] demonstrates you can declare an *alias* for a
+namespace.
+
+The *global namespace* is the declarative region outside of any namespace
+block. The *unnamed namespace* is unique to each translation unit.
+
+## Lifetime
+
+
+## Lifetime of Temporaries
+
+Compilers sometimes generate temporary objects when evaluating expressions
+at runtime. In order to conserve resources, it is important for the compiler
+to destroy temporaries early, but not too early.
+
+The rule is that temporaries remain until the end of the *full expression*
+in which they appear. In most cases, this just means until the end of the
+enclosing statement, so that temporaries do not persist from one statement
+to the next. A full expression is one that is not part of another
+expression, such as an initializer; the controlling expression of an `if`,
+`while`, or `switch`; the expressions in a `for`; and an expression returned
+from a function.
+
+The only exception to this rule is for references bound to a temporary. The
+temporary persists as long as the reference in scope.
+
+
 [`same_identifier_various_roles.c`]: code/C11.Visibility/same_identifier_various_roles.c
+[`use_struct.cpp`]: code/C11.Visibility/use_struct.cpp 
+[`same_name_function_tag.cpp`]: code/C11.Visibility/same_name_function_tag.cpp
+[`same_name_variable_tag.cpp`]: code/C11.Visibility/same_name_variable_tag.cpp
+[`pair.cpp`]: code/C11.Visibility/pair.cpp
+[`myname.h`]: code/C11.Visibility/myname.h
+[`myname.cpp`]: code/C11.Visibility/myname.cpp
+[`use_myname.cpp`]: code/C11.Visibility/use_myname.cpp
+[`unary_scope.cpp`]: code/C11.Visibility/unary_scope.cpp
+[`namespace_alias.cpp`]: code/C11.Visibility/namespace_alias.cpp
+
